fix: flex wrap sponsor section

--- a/assets/styles/tw.css
+++ b/assets/styles/tw.css
@@ -636,6 +636,10 @@ video {
   width: 50%;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .shrink-0 {
   flex-shrink: 0;
 }
